--- a/themes/dude.css
+++ b/themes/dude.css
@@ -9,6 +9,17 @@
     stroke: rgba(255, 255, 255, 0.5);
     stroke-width: 1px;
 }
+#svg .group rect {
+    fill: rgba(25, 35, 50, 0.8);
+    stroke: #ccc;
+    stroke-width: 1px;
+    cursor: move;
+}
+#svg .group .title {
+    fill: #ccc;
+    font-family: "Varela Round", sans-serif;
+    font-size: .9em;
+}
 #svg .action > rect {
     fill: rgba(25, 35, 50, 0.8);
     stroke: #ccc;
