--- a/themes/dude.css
+++ b/themes/dude.css
@@ -22,10 +22,18 @@
 }
 #svg .action > rect {
     fill: rgba(25, 35, 50, 0.8);
-    stroke: #ccc;
     stroke-width: 1px;
     cursor: move;
 }
+
+#svg .action-default > rect {
+    stroke: #ccc;
+}
+
+#svg .action-default .title {
+    fill: #ccc;
+}
+
 #svg .action:hover > rect {
     fill: rgba(15, 30, 40, 0.8);
 }
@@ -33,7 +41,6 @@
     stroke-width: 2px;
 }
 #svg .action .title {
-    fill: #ccc;
     font-family: "Varela Round", sans-serif;
     font-size: .9em;
 }
