--- a/themes/default.css
+++ b/themes/default.css
@@ -4,12 +4,16 @@
 }
 
 /* Group */
-#svg .group rect {
+#svg .group .background {
     fill: rgba(0, 0, 0, 0.5);
     stroke: #444;
 }
-#svg .group:hover rect {
+#svg .group:hover .background {
     fill: rgba(0, 0, 0, .6);
+}
+#svg .group.selected .background {
+    stroke-width: 2px;
+    stroke: #666;
 }
 #svg .group .title {
     fill: #ccc;
@@ -18,29 +22,26 @@
 }
 
 /* Action */
-#svg .action > rect {
+#svg .action .background {
     fill: rgba(0, 0, 0, 0.5);
+    stroke: #444;
 }
-#svg .action:hover > rect {
+#svg .action:hover .background {
     fill: rgba(0, 0, 0, .6);
 }
-#svg .action.selected > rect {
+#svg .action.selected .background {
     stroke-width: 2px;
+    stroke: #666;
 }
 #svg .action .title {
     font-family: helvetica, sans-serif;
     font-size: .9em;
+    fill: #ccc;
 }
 #svg .action .text {
     fill: #999;
     font-family: helvetica, sans-serif;
     font-size: .7em;
-}
-#svg .action-default .title {
-    fill: #ccc;
-}
-#svg .action-default > rect {
-    stroke: #444;
 }
 
 /* Types */
