--- a/themes/dude.css
+++ b/themes/dude.css
@@ -75,6 +75,9 @@
     font-size: .9em;
     stroke: transparent;
 }
+#svg .getter.selected .background {
+    stroke-width: 2px;
+}
 
 #svg .dom-element input {
     outline: none;
