--- a/themes/base.css
+++ b/themes/base.css
@@ -3,7 +3,7 @@
     stroke: rgba(255, 255, 255, 0.5);
     stroke-width: 1px;
 }
-#svg .group, #svg .action, #svg .getter {
+#svg .group, #svg .block {
     cursor: move;
 }
 #svg .action > text {
