--- a/themes/dude.css
+++ b/themes/dude.css
@@ -42,21 +42,28 @@
     font-size: .9em;
 }
 
-/* Action */
-#svg .action .background {
+/* Block */
+#svg .block .background {
     fill: rgba(25, 35, 50, 0.8);
     stroke-width: 1px;
-    stroke: #ccc;
 }
-#svg .action:hover .background {
+#svg .block:hover .background {
     fill: rgba(15, 30, 40, 0.8);
 }
-#svg .action.selected .background {
-    stroke-width: 2px;
-}
-#svg .action .title {
+#svg .block .title {
     font-family: "Varela Round", sans-serif;
     font-size: .9em;
+    stroke: transparent;
+}
+#svg .block.selected .background {
+    stroke-width: 2px;
+}
+
+/* Action */
+#svg .action .background {
+    stroke: #ccc;
+}
+#svg .action .title {
     fill: #ccc;
 }
 #svg .action .text {
@@ -65,88 +72,7 @@
     font-size: .7em;
 }
 
-/* Getters */
-#svg .getter .background {
-    fill: rgba(25, 35, 50, 0.8);
-    stroke-width: 1px;
-}
-#svg .getter .title {
-    font-family: "Varela Round", sans-serif;
-    font-size: .9em;
-    stroke: transparent;
-}
-#svg .getter.selected .background {
-    stroke-width: 2px;
-}
-
-#svg .dom-element input {
-    outline: none;
-    font-family: "Varela Round", sans-serif;
-    color: #ccc;
-    border: 1px solid #ccc;
-    padding: 2px;
-    border-radius: 5px;
-    background: transparent;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-}
-
-#svg .picker-string {
+/* Picker */
+#svg .picker .element {
     cursor: pointer;
-}
-
-#svg .picker-string text {
-    font-family: "Varela Round", sans-serif;
-    fill: rgba(0, 0, 0, .8);
-    font-size: .6em;
-}
-
-#svg .picker-string rect {
-    fill: rgba(200, 200, 200, 0.5);
-}
-
-#svg .picker-string:hover rect,
-#svg .picker-vec2:hover rect,
-#svg .picker-vec3:hover rect,
-#svg .picker-resource:hover rect {
-    fill: rgba(200, 200, 200, 0.8);
-}
-
-#svg .picker-boolean {
-    cursor: pointer;
-}
-
-#svg .picker-boolean rect {
-    fill: transparent;
-    stroke: #888;
-    stroke-width: 1px;
-}
-
-#svg .picker-boolean path {
-    fill: transparent;
-    stroke: transparent;
-    stroke-width: 2px;
-}
-
-#svg .picker-boolean.selected path {
-    stroke: #ccc;
-}
-
-#svg .picker-resource {
-    cursor: pointer;
-}
-
-#svg .picker-resource rect {
-    fill: rgba(200, 200, 200, 0.5);
-}
-
-#svg .picker-resource path {
-    fill: rgba(0, 0, 0, .8);
-}
-
-#svg .picker-resource text {
-    font-family: "Varela Round", sans-serif;
-    fill: rgba(0, 0, 0, .8);
-    font-size: .6em;
 }
