--- a/themes/default.css
+++ b/themes/default.css
@@ -1,44 +1,53 @@
 /* General */
-#cg {
+#graph {
     background: #2b2b2b;
+}
+#error {
+    background: rgba(231, 76, 60, 0.8);
+    color: #eee;
+    font-family: helvetica, sans-serif;
+    font-weight: 200;
+    border-radius: 0;
+    font-size: .8em;
+    box-shadow: none;
 }
 
 /* Types */
-#cg .type-boolean { fill: rgba(28, 188, 156, 0.8); stroke: rgba(28, 188, 156, 0.8); }
-#cg .type-number { fill: rgba(46, 204, 113, 0.8); stroke: rgba(46, 204, 113, 0.8); }
-#cg .type-vec3 { fill: rgba(52, 152, 219, 0.8); stroke: rgba(52, 152, 219, 0.8); }
-#cg .type-vec2 { fill: rgba(41, 128, 185, 0.8); stroke: rgba(41, 128, 185, 0.8); }
-#cg .type-color { fill: rgba(155, 89, 182, 0.8); stroke: rgba(155, 89, 182, 0.8); }
-#cg .type-string { fill: rgba(229, 103, 141, 0.8); stroke: rgba(229, 103, 141, 0.8); }
-#cg .type-list { fill: rgba(241, 196, 15, 0.8); stroke: rgba(241, 196, 15, 0.8); }
-#cg .type-dictionary { fill: rgba(243, 156, 18, 0.8); stroke: rgba(243, 156, 18, 0.8); }
-#cg .type-resource { fill: rgba(230, 126, 34, 0.8); stroke: rgba(230, 126, 34, 0.8); }
-#cg .empty {
+#graph .type-boolean { fill: rgba(28, 188, 156, 0.8); stroke: rgba(28, 188, 156, 0.8); }
+#graph .type-number { fill: rgba(46, 204, 113, 0.8); stroke: rgba(46, 204, 113, 0.8); }
+#graph .type-vec3 { fill: rgba(52, 152, 219, 0.8); stroke: rgba(52, 152, 219, 0.8); }
+#graph .type-vec2 { fill: rgba(41, 128, 185, 0.8); stroke: rgba(41, 128, 185, 0.8); }
+#graph .type-color { fill: rgba(155, 89, 182, 0.8); stroke: rgba(155, 89, 182, 0.8); }
+#graph .type-string { fill: rgba(229, 103, 141, 0.8); stroke: rgba(229, 103, 141, 0.8); }
+#graph .type-list { fill: rgba(241, 196, 15, 0.8); stroke: rgba(241, 196, 15, 0.8); }
+#graph .type-dictionary { fill: rgba(243, 156, 18, 0.8); stroke: rgba(243, 156, 18, 0.8); }
+#graph .type-resource { fill: rgba(230, 126, 34, 0.8); stroke: rgba(230, 126, 34, 0.8); }
+#graph .empty {
     fill: transparent;
     stroke-width: 1px;
 }
 
 /* Block and groups */
-#cg .group .title, #cg .block .title {
+#graph .group .title, #graph .block .title {
     font-family: helvetica, sans-serif;
     /*font-family: Monaco, Consolas, "Lucida Console", monospace;*/
     font-weight: 200;
     font-size: .9em;
     stroke: transparent;
 }
-#cg .group .background, #cg .block .background {
+#graph .group .background, #graph .block .background {
     fill: rgba(30, 30, 30, 0.8);
 }
-#cg .group:hover .background, #cg .block:hover .background {
+#graph .group:hover .background, #graph .block:hover .background {
     fill: rgba(20, 20, 20, .8);
 }
-#cg .group.selected .background, #cg .block.selected .background {
+#graph .group.selected .background, #graph .block.selected .background {
     fill: rgba(20, 20, 20, .8);
     stroke-width: 2px;
 }
 
 /* Blocks */
-#cg .block .text {
+#graph .block .text {
     fill: #999;
     font-family: helvetica, sans-serif;
     font-weight: 200;
@@ -47,14 +56,14 @@
 }
 
 /* Group and Action */
-#cg .group .background, #cg .action .background {
+#graph .group .background, #graph .action .background {
     stroke: black;
 }
-#cg .group .title, #cg .action .title {
+#graph .group .title, #graph .action .title {
     fill: #c4c4c4;
 }
 
 /* Getter */
-#cg .getter .title, #cg .picker .title {
+#graph .getter .title, #graph .picker .title {
     font-size: .8em;
 }
