--- a/themes/default.css
+++ b/themes/default.css
@@ -1,5 +1,5 @@
 /* General */
-#graph {
+#svg {
     background: #2b2b2b;
 }
 #error {
@@ -13,41 +13,41 @@
 }
 
 /* Types */
-#graph .type-boolean { fill: rgba(28, 188, 156, 0.8); stroke: rgba(28, 188, 156, 0.8); }
-#graph .type-number { fill: rgba(46, 204, 113, 0.8); stroke: rgba(46, 204, 113, 0.8); }
-#graph .type-vec3 { fill: rgba(52, 152, 219, 0.8); stroke: rgba(52, 152, 219, 0.8); }
-#graph .type-vec2 { fill: rgba(41, 128, 185, 0.8); stroke: rgba(41, 128, 185, 0.8); }
-#graph .type-color { fill: rgba(155, 89, 182, 0.8); stroke: rgba(155, 89, 182, 0.8); }
-#graph .type-string { fill: rgba(229, 103, 141, 0.8); stroke: rgba(229, 103, 141, 0.8); }
-#graph .type-list { fill: rgba(241, 196, 15, 0.8); stroke: rgba(241, 196, 15, 0.8); }
-#graph .type-dictionary { fill: rgba(243, 156, 18, 0.8); stroke: rgba(243, 156, 18, 0.8); }
-#graph .type-resource { fill: rgba(230, 126, 34, 0.8); stroke: rgba(230, 126, 34, 0.8); }
-#graph .empty {
+#svg .type-boolean { fill: rgba(28, 188, 156, 0.8); stroke: rgba(28, 188, 156, 0.8); }
+#svg .type-number { fill: rgba(46, 204, 113, 0.8); stroke: rgba(46, 204, 113, 0.8); }
+#svg .type-vec3 { fill: rgba(52, 152, 219, 0.8); stroke: rgba(52, 152, 219, 0.8); }
+#svg .type-vec2 { fill: rgba(41, 128, 185, 0.8); stroke: rgba(41, 128, 185, 0.8); }
+#svg .type-color { fill: rgba(155, 89, 182, 0.8); stroke: rgba(155, 89, 182, 0.8); }
+#svg .type-string { fill: rgba(229, 103, 141, 0.8); stroke: rgba(229, 103, 141, 0.8); }
+#svg .type-list { fill: rgba(241, 196, 15, 0.8); stroke: rgba(241, 196, 15, 0.8); }
+#svg .type-dictionary { fill: rgba(243, 156, 18, 0.8); stroke: rgba(243, 156, 18, 0.8); }
+#svg .type-resource { fill: rgba(230, 126, 34, 0.8); stroke: rgba(230, 126, 34, 0.8); }
+#svg .empty {
     fill: transparent;
     stroke-width: 1px;
 }
 
 /* Block and groups */
-#graph .group .title, #graph .block .title {
+#svg .group .title, #svg .block .title {
     font-family: helvetica, sans-serif;
     /*font-family: Monaco, Consolas, "Lucida Console", monospace;*/
     font-weight: 200;
     font-size: .9em;
     stroke: transparent;
 }
-#graph .group .background, #graph .block .background {
+#svg .group .background, #svg .block .background {
     fill: rgba(30, 30, 30, 0.8);
 }
-#graph .group:hover .background, #graph .block:hover .background {
+#svg .group:hover .background, #svg .block:hover .background {
     fill: rgba(20, 20, 20, .8);
 }
-#graph .group.selected .background, #graph .block.selected .background {
+#svg .group.selected .background, #svg .block.selected .background {
     fill: rgba(20, 20, 20, .8);
     stroke-width: 2px;
 }
 
 /* Blocks */
-#graph .block .text {
+#svg .block .text {
     fill: #999;
     font-family: helvetica, sans-serif;
     font-weight: 200;
@@ -56,14 +56,14 @@
 }
 
 /* Group and Action */
-#graph .group .background, #graph .action .background {
+#svg .group .background, #svg .action .background {
     stroke: black;
 }
-#graph .group .title, #graph .action .title {
+#svg .group .title, #svg .action .title {
     fill: #c4c4c4;
 }
 
 /* Getter */
-#graph .getter .title, #graph .picker .title {
+#svg .getter .title, #svg .picker .title {
     font-size: .8em;
 }
