--- a/themes/dude.css
+++ b/themes/dude.css
@@ -11,7 +11,7 @@
     border-radius: 5px;
     box-shadow: none;
 }
-#graph {
+#svg {
     background: #1d283a;
 }
 #group {
@@ -19,67 +19,67 @@
 }
 
 /* Types */
-#graph .type-flux { fill: rgba(220, 220, 220, 1); stroke: rgba(220, 220, 220, 1); }
-#graph .type-boolean { fill: rgba(28, 188, 156, 1); stroke: rgba(28, 188, 156, 1); }
-#graph .type-number { fill: rgba(241, 196, 15, 1); stroke: rgba(241, 196, 15, 1); }
-#graph .type-string { fill: rgba(230, 126, 34, 1); stroke: rgba(230, 126, 34, 1); }
-#graph .type-vec3 { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
-#graph .type-vec2 { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
-#graph .type-color { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
-#graph .type-list { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
-#graph .type-dictionary { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
-#graph .type-resource { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
-#graph .empty {
+#svg .type-flux { fill: rgba(220, 220, 220, 1); stroke: rgba(220, 220, 220, 1); }
+#svg .type-boolean { fill: rgba(28, 188, 156, 1); stroke: rgba(28, 188, 156, 1); }
+#svg .type-number { fill: rgba(241, 196, 15, 1); stroke: rgba(241, 196, 15, 1); }
+#svg .type-string { fill: rgba(230, 126, 34, 1); stroke: rgba(230, 126, 34, 1); }
+#svg .type-vec3 { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
+#svg .type-vec2 { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
+#svg .type-color { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
+#svg .type-list { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
+#svg .type-dictionary { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
+#svg .type-resource { fill: rgba(52, 152, 219, 1); stroke: rgba(52, 152, 219, 1); }
+#svg .empty {
     fill: transparent;
     stroke-width: 1px;
 }
 
 /* Group */
-#graph .group .background {
+#svg .group .background {
     fill: rgba(25, 35, 50, 0.8);
     stroke: #ccc;
     stroke-width: 1px;
 }
-#graph .group.selected .background {
+#svg .group.selected .background {
     stroke-width: 2px;
 }
-#graph .group .title {
+#svg .group .title {
     fill: #ccc;
     font-family: "Varela Round", sans-serif;
     font-size: .9em;
 }
 
 /* Block */
-#graph .block .background {
+#svg .block .background {
     fill: rgba(25, 35, 50, 0.8);
     stroke-width: 1px;
 }
-#graph .block:hover .background {
+#svg .block:hover .background {
     fill: rgba(15, 30, 40, 0.8);
 }
-#graph .block .title {
+#svg .block .title {
     font-family: "Varela Round", sans-serif;
     font-size: .9em;
     stroke: transparent;
 }
-#graph .block.selected .background {
+#svg .block.selected .background {
     stroke-width: 2px;
 }
 
 /* Action */
-#graph .action .background {
+#svg .action .background {
     stroke: #ccc;
 }
-#graph .action .title {
+#svg .action .title {
     fill: #ccc;
 }
-#graph .action .text {
+#svg .action .text {
     fill: #999;
     font-family: "Varela Round", sans-serif;
     font-size: .7em;
 }
 
 /* Picker */
-#graph .picker .element {
+#svg .picker .element {
     cursor: pointer;
 }
