Extract toolbar into a cg-toolbar element and replace groupDialog by a groupBar element.

--- a/themes/dude.css
+++ b/themes/dude.css
@@ -83,3 +83,15 @@
 #graph .picker .element {
     cursor: pointer;
 }
+
+#graph .picker .checkbox rect {
+    fill: transparent;
+}
+
+#graph .picker .checkbox path {
+    fill: transparent;
+    stroke-width: 2px;
+}
+#graph .picker .checkbox:not(.selected) path {
+    stroke: transparent;
+}
