--- a/themes/dude.css
+++ b/themes/dude.css
@@ -73,10 +73,11 @@
 #svg .action .title {
     fill: #ccc;
 }
-#svg .action .text {
+#svg .action .description {
     fill: #999;
     font-family: "Varela Round", sans-serif;
     font-size: .7em;
+    stroke: transparent;
 }
 
 /* Picker */
