--- a/elements/cg-graph.css
+++ b/elements/cg-graph.css
@@ -4,6 +4,10 @@
     width: 100%;
     height: 100%;
 }
+#shadow-dom-bug {
+    width: 100%;
+    height: 100%;
+}
 #svg {
     width: 100%;
     height: 100%;
