--- a/themes/light.css
+++ b/themes/light.css
@@ -56,8 +56,10 @@
 
 /* Group and Action */
 #svg .group .background, #svg .block .background {
-    filter:url(#dropshadow);
-    filter: drop-shadow(0 0 3px rgba(0, 0, 0, .2));
+    /*filter:url(#dropshadow);*/
+    /*filter: drop-shadow(0 0 3px rgba(0, 0, 0, .2));*/
+    stroke: #ccc;
+    stroke-width: 1px;
 }
 
 /* Getter */
