--- a/themes/light.css
+++ b/themes/light.css
@@ -1,4 +1,9 @@
 /* General */
+#svg #selection {
+    fill: rgba(0, 0, 0, 0.1);
+    stroke: rgba(0, 0, 0, 0.2);
+    stroke-width: 1px;
+}
 #svg {
     background: #e7e7e7;
 }
@@ -24,15 +29,15 @@
 #svg .type-dictionary { fill: rgba(52, 152, 219, 0.7); stroke: rgba(52, 152, 219, 0.7); }
 #svg .type-resource { fill: rgba(52, 152, 219, 0.7); stroke: rgba(52, 152, 219, 0.7); }
 
-#svg .type-boolean:hover, #svg .type-boolean.selected { fill: rgba(28, 188, 156, 0.9); stroke: rgba(28, 188, 156, 0.9); }
-#svg .type-number:hover, #svg .type-number.selected { fill: rgba(241, 196, 15, 0.9); stroke: rgba(241, 196, 15, 0.9); }
-#svg .type-string:hover, #svg .type-string.selected { fill: rgba(230, 126, 34, 0.9); stroke: rgba(230, 126, 34, 0.9); }
-#svg .type-vec3:hover, #svg .type-vec3.selected { fill: rgba(52, 152, 219, 0.9); stroke: rgba(52, 152, 219, 0.9); }
-#svg .type-vec2:hover, #svg .type-vec2.selected { fill: rgba(52, 152, 219, 0.9); stroke: rgba(52, 152, 219, 0.9); }
-#svg .type-color:hover, #svg .type-color.selected { fill: rgba(52, 152, 219, 0.9); stroke: rgba(52, 152, 219, 0.9); }
-#svg .type-list:hover, #svg .type-list.selected { fill: rgba(52, 152, 219, 0.9); stroke: rgba(52, 152, 219, 0.9); }
-#svg .type-dictionary:hover, #svg .type-dictionary.selected { fill: rgba(52, 152, 219, 0.9); stroke: rgba(52, 152, 219, 0.9); }
-#svg .type-resource:hover, #svg .type-resource.selected { fill: rgba(52, 152, 219, 0.9); stroke: rgba(52, 152, 219, 0.9); }
+#svg .type-boolean:not(.connection):hover, #svg .type-boolean.selected { fill: rgba(28, 188, 156, 0.9); stroke: rgba(28, 188, 156, 0.9); }
+#svg .type-number:not(.connection):hover, #svg .type-number.selected { fill: rgba(241, 196, 15, 0.9); stroke: rgba(241, 196, 15, 0.9); }
+#svg .type-string:not(.connection):hover, #svg .type-string.selected { fill: rgba(230, 126, 34, 0.9); stroke: rgba(230, 126, 34, 0.9); }
+#svg .type-vec3:not(.connection):hover, #svg .type-vec3.selected { fill: rgba(52, 152, 219, 0.9); stroke: rgba(52, 152, 219, 0.9); }
+#svg .type-vec2:not(.connection):hover, #svg .type-vec2.selected { fill: rgba(52, 152, 219, 0.9); stroke: rgba(52, 152, 219, 0.9); }
+#svg .type-color:not(.connection):hover, #svg .type-color.selected { fill: rgba(52, 152, 219, 0.9); stroke: rgba(52, 152, 219, 0.9); }
+#svg .type-list:not(.connection):hover, #svg .type-list.selected { fill: rgba(52, 152, 219, 0.9); stroke: rgba(52, 152, 219, 0.9); }
+#svg .type-dictionary:not(.connection):hover, #svg .type-dictionary.selected { fill: rgba(52, 152, 219, 0.9); stroke: rgba(52, 152, 219, 0.9); }
+#svg .type-resource:not(.connection):hover, #svg .type-resource.selected { fill: rgba(52, 152, 219, 0.9); stroke: rgba(52, 152, 219, 0.9); }
 
 #svg .empty {
     fill: transparent;
@@ -55,6 +60,9 @@
 }
 #svg .group.selected .background, #svg .action.selected .background {
     fill: rgba(255, 255, 255, .8);
+}
+
+#svg .group.selected .background, #svg .block.selected .background {
     stroke-width: 2px;
 }
 
@@ -86,5 +94,5 @@
 }
 
 #svg .getter circle, #svg .picker circle {
-    stroke: #444;
+    stroke: #666;
 }
